tanto dejar de utilizar el objeto CollisionInfo (lo que ya se ha logrado) como
simplificar la manera en la que se describen las interacciones entre actores (lo
que considero que también se ha logrado con esto).

Se simplifican los constructores de los actores para recibir solo información final
como la instancia del objeto LaPandemia. Ya que algunos datos como la dirección del
personaje o el generador (para los objetos generados dinámicamente) se establecen
mediante setters, me pareció una decisión arbitraria que otra información como la
posición inicial sí estuvieran en el constructor, por lo que ahora por coherencia
ya no lo están.

Se añade el papel higiénico como nuevo actor.

Se pasa de un sistema de coordenadas de mundo reales a enteras debido a que la
detección de colisiones tal y como está planteada para este juego estaba resultando
problemática con variables float por los problemas propios de utilizar una
representación de números reales de precisión limitada donde se necesita precisión
ilimitada. Esto conlleva adaptar ligeramente la implementación del movimiento de
los virus para que sigan pudiendo moverse a lo largo del tiempo como lo hacían pese
a tener que especificar los desplazamientos en cada frame en cantidades enteras.

Se limita la cantidad máxima de virus y de papel higiénico que pueden estar
presentes en el mapa simultáneamente.


Cambios presentados el 2021/01/31
---------------------------------
Se añade un tiempo límite de vida opcional para los actores generables, configurable
desde el generador, y se establecen valores para los tres actores de ese tipo
actualmente existentes: virus, mascarillas y papel.


Cambios presentados el 2021/02/01
---------------------------------
Se detecta cuándo el valor del zoom está muy cerca del máximo y, en tal caso, se
ajusta automáticamente a este, corrigiendo así el problema de usabilidad descrito en
los comentarios de GameScreen#zoom.